<resources>
    <string name="app_name">GoogleAssistantProject</string>
    <string name="addDevice">Vuoi aggiungere un nuovo dispositivo alla casa?</string>
    <string name="si">SI</string>
    <string name="ok">ok</string>
    <string name="no">NO</string>
    <string name="addDevDesc">Compila tutti i campi per collegare un nuovo dispositivo alla tua casa</string>
    <string name="devName">Nome</string>
    <string name="devType">Tipologia</string>
    <string name="devManufater">Ditta produttrice</string>
    <string name="devModel">Modello</string>
    <string name="salva">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="datiObb">Tutti i dati sono obbligatori</string>
    <string name="title_activity_device_manager">DeviceManager</string>
    <string name="cookmode">Modalità di cottura</string>
    <string name="mode">Carico</string>
    <string name="modefan">Modalità ventola</string>
    <string name="modeterm">Modalità termostato</string>
    <string name="delete">Cancellare il dispositivo selezionato?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>